--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires      = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name        = "datrec"
-description = "reconcile tables with polar"
+name        = "datarec"
+description = "utilities for reconciling data"
 version     = "0.1.0"
 readme      = "README.md"
 dependencies = [
