--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,12 @@ dependencies = [
 authors         = [
   { name = "Chris Mamon", email = "chrisam1993@live.com" },
 ]
+classifiers = [
+  "License :: OSI Approved :: MIT License",
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3.7",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+]
